--- a/.github/workflows/macOS-generate-profile-data-and-jarlog.yml
+++ b/.github/workflows/macOS-generate-profile-data-and-jarlog.yml
@@ -9,21 +9,22 @@ on:
     workflow_call:
     workflow_dispatch:
 jobs:
-   macOS-Universal-gen-profdata-and-jarlog:
+  macOS-Universal-gen-profdata-and-jarlog:
     runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
-        runs-on: [macos-latest, self-hosted]
-        # macos-latest is x86_64, self-hosted is arm64
+        runs-on: [macos-13, self-hosted]
+        # macos-latest-large is x86_64 and macos-latest is arm64
 
     steps:
       - name: Init
         run: |
+          sysctl machdep.cpu
           export RUNNER_USERDIR=`echo ~`
           echo "RUNNER_USERDIR=$RUNNER_USERDIR" >> $GITHUB_ENV
           mkdir -p ~/downloads/artifacts
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Clone 🧬
         with:
           submodules: 'recursive'
@@ -31,7 +32,7 @@ jobs:
       - name: Check Arch type
         shell: bash
         run: |
-          if [[ $GHA_BUILD_MACHINE != 'macos-latest' ]]; then
+          if [[ $GHA_BUILD_MACHINE != 'macos-13' ]]; then
             export ARCH_TYPE=`echo "aarch64"`
             echo "ARCH_TYPE=$ARCH_TYPE" >> $GITHUB_ENV
           else
@@ -41,18 +42,30 @@ jobs:
         env:
           GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         id: download-artifacts-mac-enable-profgen
         name: Download artifact 📥
         with:
           name: midori-mac-${{ env.ARCH_TYPE }}-build-with-profgen
           path: ~/downloads/artifacts
 
-      - uses: actions/setup-python@v4
+      - name: force install python3.12
+        continue-on-error: true
+        if: ${{ env.ARCH_TYPE == 'x86_64' }}
+        run: |
+          brew install python@3.12
+
+      - name: force link python3.12
+        continue-on-error: true
+        if: ${{ env.ARCH_TYPE == 'x86_64' }}
+        run: |
+          # due to "Error: The `brew link` step did not complete successfully" we need to force link python3.12
+          brew link --force --overwrite python@3.12
+
+      - uses: actions/setup-python@v5
         if: ${{ env.ARCH_TYPE == 'x86_64' }}
         with:
-          python-version: '3.11' 
-
+          python-version: '3.11'
       - name: setup environment 🌲
         run: |
           echo -e "ac_add_options --enable-bootstrap" >> mozconfig
@@ -65,20 +78,27 @@ jobs:
           export PATH=/usr/local/opt/gnu-tar/libexec/gnubin:$PATH
           ./mach --no-interactive bootstrap --application-choice browser
 
+      - name: Install setup tool via PIP 📦
+        run: |
+          pip install setuptools
+
       - name: Extract artifact 📂
         run: |
           mkdir -p ./midori
           cp ${{ steps.download-artifacts-mac-enable-profgen.outputs.download-path }}/${ARCH_TYPE}-apple-darwin-output.tar.xz ./
           tar xf ${ARCH_TYPE}-apple-darwin-output.tar.xz
-          
+
+## ./mach python python/mozbuild/mozbuild/action/install.py $MOZ_FETCHES_DIR/target.dmg $MOZ_FETCHES_DIR
       - name: Generate Profdata 📊
         run: |
-          LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata JARLOG_FILE=en-US.log ./mach python build/pgo/profileserver.py --binary ./obj-${ARCH_TYPE}-apple-darwin/dist/midori/Midori.app/Contents/MacOS/midori
+          export LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata
+          export JARLOG_FILE="en-US.log"
+          ./mach python build/pgo/profileserver.py --binary ./obj-${ARCH_TYPE}-apple-darwin/dist/midori/Midori.app/Contents/MacOS/midori
         env:
           GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
-      
+
       - name: Publish 🎁
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: midori-${{ env.ARCH_TYPE }}-apple-darwin-profdata-and-jarlog
           path: |
