--- a/.github/workflows/update-submodule.yml
+++ b/.github/workflows/update-submodule.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         submodules: "recursive"
 
@@ -18,7 +18,7 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-    
+
     - name: Update Submodules
       run: |
         git submodule update --remote
@@ -29,5 +29,5 @@ jobs:
           exit 0
         fi
 
-        git commit -m "[MB bot] Update submodules" -a
+        git commit -m "[FB bot] Update submodules" -a
         git push
