--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -19,10 +19,6 @@ on:
         description: generate profile for PGO.
         type: boolean
         default: false
-      build32bit:
-        description: enable 32bit build
-        type: boolean
-        default: false
       aarch64:
         description: enable aarch64 build
         type: boolean
@@ -72,7 +68,7 @@ jobs:
       mar_size: ${{steps.gen-mar.outputs.MAR_SIZE}}
     steps:
     - name: Use Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: "lts/*"
     - name: Check Argument Compatibility
@@ -93,15 +89,13 @@ jobs:
           )
         ) {process.exit(-1);}
 
-        // aarch64 & 32bit build is not compatible
+        // aarch64 is not compatible
         if (
           process.env.GHA_aarch64 == "true"
-          && process.env.GHA_32bit == "true"
         ) {process.exit(-1);}
       env:
         GHA_profgen: ${{inputs.profgen}}
         GHA_aarch64: ${{inputs.aarch64}}
-        GHA_32bit: ${{inputs.build32bit}}
         GHA_zstd: ${{inputs.zstd}}
         GHA_beta: ${{inputs.beta}}
         GHA_mar: ${{inputs.mar}}
@@ -113,7 +107,7 @@ jobs:
         sudo perl -p -i -e 's%(deb(?:-src|)\s+)https?://(?!archive\.canonical\.com|security\.ubuntu\.com)[^\s]+%$1http://archive.ubuntu.com/ubuntu/%' /etc/apt/sources.list
         sudo apt update
 
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       name: Clone 🧬
       with:
         submodules: 'recursive'
@@ -124,13 +118,13 @@ jobs:
         .github/workflows/src/disk_swap_for_github_runner.sh
 
     - name: Configure sccache
-      uses: actions/github-script@v6
+      uses: actions/github-script@v7
       with:
         script: |
           core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
           core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
-    - uses: actions/download-artifact@v3
+    - uses: actions/download-artifact@v4
       name: Download artifact if use profdata📥
       if: inputs.profdata_jarlog_artifact_name
       with:
@@ -140,11 +134,9 @@ jobs:
     - name: Setup 🪛
       run: |
         mkdir -p ~/win-cross
-        
+
         if [[ $GHA_aarch64 == 'true' ]]; then
           cp ./.github/workflows/src/windows/aarch64/mozconfig_win_aarch64_pgo_base mozconfig
-        elif [[ $GHA_32bit == 'true' ]]; then
-          cp ./.github/workflows/src/windows/x86/mozconfig_win_x86_pgo_base mozconfig
         else
           cp ./.github/workflows/src/windows/x86_64/mozconfig_win_x86_64_pgo_base mozconfig
         fi
@@ -183,8 +175,8 @@ jobs:
 
         echo Setup Visual Studio
         sudo apt install -y msitools python3-pip
-        ./mach python --virtualenv build taskcluster/scripts/misc/get_vs.py build/vs/vs2019.yaml ~/win-cross/vs2019
-        chmod -R +x "$(echo ~)/win-cross/vs2019"
+        ./mach python --virtualenv build taskcluster/scripts/misc/get_vs.py build/vs/vs2022.yaml ~/win-cross/vs2022
+        chmod -R +x "$(echo ~)/win-cross/vs2022"
         #? from daily-build-with-update
         #? for resolve some problems relate to VCRuntime
         #? from end
@@ -197,7 +189,6 @@ jobs:
       env:
         GHA_profgen: ${{inputs.profgen}}
         GHA_aarch64: ${{inputs.aarch64}}
-        GHA_32bit: ${{inputs.build32bit}}
         GHA_beta: ${{inputs.beta}}
         GHA_profdata_jarlog_artifact_name : ${{inputs.profdata_jarlog_artifact_name}}
         GHA_MOZ_BUILD_DATE: ${{inputs.MOZ_BUILD_DATE}}
@@ -205,24 +196,21 @@ jobs:
     - name: setup Rust 🦀
       run: |
         if [[ $GHA_aarch64 == 'true' ]];then
-          rustup target add aarch64-pc-windows-msvc
-        elif [[ $GHA_32bit == 'true' ]];then
-          rustup target add i686-pc-windows-msvc
+          rustup target add aarch64-pc-windows-msvc --toolchain stable
         else
-          rustup target add x86_64-pc-windows-msvc
+          rustup target add x86_64-pc-windows-msvc --toolchain stable
         fi
 
         #? https://github.com/mozilla/sccache#known-caveats
         export CARGO_INCREMENTAL=0
       env:
         GHA_aarch64: ${{inputs.aarch64}}
-        GHA_32bit: ${{inputs.build32bit}}
 
     - name: Change update url if beta
       if: inputs.beta
       run: |
-       sed -i 's|https://@MOZ_APPUPDATE_HOST@/browser/%DISPLAY_VERSION%/%OS%/%ARCH%/update.xml|https://@MOZ_APPUPDATE_HOST@/browser/beta/%OS%/%ARCH%/update.xml |g' ./build/application.ini.in
-  
+        sed -i 's|https://@MOZ_APPUPDATE_HOST@/browser/%DISPLAY_VERSION%/%OS%/%ARCH%/update.xml|https://@MOZ_APPUPDATE_HOST@/browser/beta/%OS%/%ARCH%/update.xml |g' ./build/application.ini.in
+
     #On Package, if not copies, error occur
     - name: Copy l10n files if beta
       if: inputs.beta
@@ -250,7 +238,7 @@ jobs:
         ./mach build
       env:
         GHA_MOZ_BUILD_DATE: ${{inputs.MOZ_BUILD_DATE}}
-        
+
     - name: Retry Build if 1st build is failed 🔨
       if: failure()
       run: |
@@ -263,13 +251,12 @@ jobs:
         GHA_MOZ_BUILD_DATE: ${{inputs.MOZ_BUILD_DATE}}
 
     - name: Package 📦
-
       run: |
         if [[ -n $GHA_MOZ_BUILD_DATE ]];then
           export MOZ_BUILD_DATE=$GHA_MOZ_BUILD_DATE
         fi
         ./mach package
-
+        ./mach build
         ./mach package-multi-locale --locales ar cs da de el en-US en-GB es-ES fr hu id it ja ko lt nl nn-NO pl pt-BR pt-PT ru sv-SE th tr uk vi zh-CN zh-TW
 
       env:
@@ -281,9 +268,6 @@ jobs:
         if [[ $GHA_aarch64 == 'true' ]];then
           arch="aarch64"
           arch_inst="win64-aarch64"
-        elif [[ $GHA_32bit == 'true' ]];then
-          arch="i686"
-          arch_inst="win32"
         else
           arch="x86_64"
           arch_inst="win64"
@@ -303,7 +287,6 @@ jobs:
         # cp -r obj-x86_64-pc-mingw32/dist/midori ~/output/
       env:
         GHA_aarch64: ${{inputs.aarch64}}
-        GHA_32bit: ${{inputs.build32bit}}
         GHA_zstd: ${{inputs.zstd}}
         GHA_beta: ${{inputs.beta}}
 
@@ -313,8 +296,6 @@ jobs:
       run: |
         if [[ $GHA_aarch64 == 'true' ]];then
           arch="aarch64"
-        elif [[ $GHA_32bit == 'true' ]];then
-          arch="i686"
         else
           arch="x86_64"
         fi
@@ -329,9 +310,6 @@ jobs:
 
         echo "MAR_NAME=WINNT-${arch}.mar" >> $GITHUB_OUTPUT
         echo "MAR_SIZE=$(stat -c "%s" ~/output/WINNT-${arch}.mar)" >> $GITHUB_OUTPUT
-      env:
-        GHA_32bit: ${{inputs.build32bit}}
-
     # Publish START
     - name: make name of publish archive
       shell: node {0}
@@ -344,7 +322,7 @@ jobs:
         GHA_default_name: midori-windows-${{fromJson('["x86","aarch"]')[inputs.aarch64]}}${{fromJson('["_64",""]')[inputs.build32bit]}}-${{fromJson('["package","build-with-profgen"]')[inputs.profgen]}}${{fromJson('["","-zstd"]')[inputs.zstd]}}
 
     - name: Publish Package🎁
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{env.ARTIFACT_NAME}}
         path: ~/output
